@@ -17,8 +17,8 @@ Section Headers:
  +\[ 6\] .text +PROGBITS +0+11000 0+1000 0+1194 00 +AX +0 +0 4096
  +\[ 7\] .tdata +PROGBITS +0+22194 0+2194 0+1060 00 WAT +0 +0 +4
  +\[ 8\] .tbss +NOBITS +0+231f4 0+31f4 0+40 00 WAT +0 +0 +4
- +\[ 9\] .dynamic +DYNAMIC +0+231f8 0+31f8 0+80 08 +WA +4 +0 +4
- +\[10\] .got +PROGBITS +0+23278 0+3278 0+14 04 +WA +0 +0 +4
+ +\[ 9\] .dynamic +DYNAMIC +0+231f4 0+31f4 0+80 08 +WA +4 +0 +4
+ +\[10\] .got +PROGBITS +0+23274 0+3274 0+14 04 +WA +0 +0 +4
  +\[11\] .plt +.*
  +\[12\] .shstrtab +.*
  +\[13\] .symtab +.*
@@ -35,23 +35,23 @@ Program Headers:
  +INTERP +0x0+f4 0x0+100f4 0x0+100f4 0x0+11 0x0+11 R +0x1
 .*Requesting program interpreter.*
  +LOAD +0x0+ 0x0+10000 0x0+10000 0x0+2194 0x0+2194 R E 0x10000
- +LOAD +0x0+2194 0x0+22194 0x0+22194 0x0+10f8 0x0+10f8 RWE 0x10000
- +DYNAMIC +0x0+31f8 0x0+231f8 0x0+231f8 0x0+80 0x0+80 RW +0x4
+ +LOAD +0x0+2194 0x0+22194 0x0+22194 0x0+10f4 0x0+10f4 RWE 0x10000
+ +DYNAMIC +0x0+31f4 0x0+231f4 0x0+231f4 0x0+80 0x0+80 RW +0x4
  +TLS +0x0+2194 0x0+22194 0x0+22194 0x0+1060 0x0+10a0 R +0x4
 #...
 
 Relocation section '.rela.dyn' at offset 0x[0-9a-f]+ contains 4 entries:
  Offset +Info +Type +Sym. Value +Symbol's Name \+ Addend
-0002327c +0000014e R_SPARC_TLS_TPOFF32 +00000000 +sG5 \+ 0
-00023280 +0000034e R_SPARC_TLS_TPOFF32 +00000000 +sG2 \+ 0
-00023284 +0000074e R_SPARC_TLS_TPOFF32 +00000000 +sG6 \+ 0
-00023288 +0000084e R_SPARC_TLS_TPOFF32 +00000000 +sG1 \+ 0
+00023278 +0000014e R_SPARC_TLS_TPOFF32 +00000000 +sG5 \+ 0
+0002327c +0000034e R_SPARC_TLS_TPOFF32 +00000000 +sG2 \+ 0
+00023280 +0000074e R_SPARC_TLS_TPOFF32 +00000000 +sG6 \+ 0
+00023284 +0000084e R_SPARC_TLS_TPOFF32 +00000000 +sG1 \+ 0
 
 Symbol table '.dynsym' contains 11 entries:
  +Num: +Value +Size Type +Bind +Vis +Ndx Name
  +0: 0+ +0 NOTYPE +LOCAL +DEFAULT +UND *
  +1: 0+ +0 TLS +GLOBAL DEFAULT +UND sG5
- +2: 0+231f8 +0 OBJECT +GLOBAL DEFAULT +ABS _DYNAMIC
+ +2: 0+231f4 +0 OBJECT +GLOBAL DEFAULT +ABS _DYNAMIC
  +3: 0+ +0 TLS +GLOBAL DEFAULT +UND sG2
  +4: [0-9a-f]+ +0 OBJECT +GLOBAL DEFAULT +ABS _PROCEDURE_LINKAGE_TABLE_
  +5: 0+ +0 FUNC +GLOBAL DEFAULT +UND __tls_get_addr
@@ -99,7 +99,7 @@ Symbol table '.symtab' contains 68 entries:
  +[0-9]+: 0+1074 +0 TLS +GLOBAL DEFAULT +8 bg6
  +[0-9]+: 0+ +0 TLS +GLOBAL DEFAULT +UND sG5
  +[0-9]+: 0+1068 +0 TLS +GLOBAL DEFAULT +8 bg3
- +[0-9]+: 0+231f8 +0 OBJECT +GLOBAL DEFAULT +ABS _DYNAMIC
+ +[0-9]+: 0+231f4 +0 OBJECT +GLOBAL DEFAULT +ABS _DYNAMIC
  +[0-9]+: 0+1008 +0 TLS +GLOBAL DEFAULT +7 sg3
  +[0-9]+: 0+1048 +0 TLS +GLOBAL HIDDEN +7 sh3
  +[0-9]+: 0+ +0 TLS +GLOBAL DEFAULT +UND sG2
@@ -124,7 +124,7 @@ Symbol table '.symtab' contains 68 entries:
  +[0-9]+: 0+1014 +0 TLS +GLOBAL DEFAULT +7 sg6
  +[0-9]+: 0+1018 +0 TLS +GLOBAL DEFAULT +7 sg7
  +[0-9]+: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +ABS _edata
- +[0-9]+: 0+23278 +0 OBJECT +GLOBAL +HIDDEN +10 _GLOBAL_OFFSET_TABLE_
+ +[0-9]+: 0+23274 +0 OBJECT +GLOBAL +HIDDEN +10 _GLOBAL_OFFSET_TABLE_
  +[0-9]+: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +ABS _end
  +[0-9]+: 0+1044 +0 TLS +GLOBAL HIDDEN +7 sh2
  +[0-9]+: 0+1054 +0 TLS +GLOBAL HIDDEN +7 sh6
