@@ -7,5 +7,5 @@
 .*: +file format elf32-sparc
 
 Contents of section .got:
- 23278 000231f8 0+ 0+ 0+  .*
- 23288 0+  .*
+ 23274 000231f4 0+ 0+ 0+  .*
+ 23284 0+  .*
